PR bootstrap/79033 - asan.c not compiling with make BOOT_CFLAGS=-O0

gcc/ChangeLog:
	* asan.c (asan_emit_stack_protection): Increase local buffer size
	to avoid snprintf truncation warning.

From-SVN: r244237